updated styling and readme

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@ body,
   height: 100%;
 }
 body {
-  background-color: #c6fad2;
-  color: #f48882;
+  background-color: slategray;
+  color: black;
 }
