--- a/src/NoteList.module.css
+++ b/src/NoteList.module.css
@@ -1,6 +1,6 @@
 .card {
-  transition: translate ease-in-out 10ms, box-shadow ease-in-out 10ms;
-  background-color: #fad2cc;
+  transition: translate ease-in-out 20ms, box-shadow ease-in-out 20ms;
+  background-color: #2a52be;
 }
 
 .card:hover,
